samples/_failures_safe/1761358071_7e49f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44f6094b.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_44f6094b.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
